--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">Player Name</span>
                     </div>
-                    <input type="text" class="form-control" aria-label="Sizing example input" id="search" aria-describedby="inputGroup-sizing-default">
+                    <input type="text" class="form-control" aria-label="Sizing example input" id="search" aria-describedby="inputGroup-sizing-default" placeholder="Min 4 Characters">
                 </div>
             </div>
             <div class="col-12 col-md-4">
